# AI

./: .gitignore  Dockerfile  Dockerfile copy  Procfile  Readme.md  commands.txt  macro.py  pyproject.toml  readme.md  req_meta.py  resumo.txt
consultoria_financeira/: construir_pdf copy.py  executar_transformação.py  gerador_pdf copy.py  gerador_pdf.py  gerar_pdf.py  gerar_pdf_teste.py  leitor_diagnostico.py  readme.md
consultoria_financeira/Etapa2/: construir_pdf.py  executar_transformação.py  gerador_pdf.py  gerar_pdf.py  gerar_pdf_final.py  leitor_diagnostico.py  transformar_dados_diagnostico.py
consultoria_financeira/Etapa3/: treasure_map.py
consultoria_financeira/docs/: diagnostico_financeiro_pablo.csv  diagnostico_financeiro_romulo.csv  diagnostico_financeiro_samuel.csv  mapeamento_colunas.txt
src/: call_api.py  email_test.py  main.py  open_ai_bot.py  security.py  security_test.py  test_authenticate_user.py  test_create_user.py  test_firestore.py  test_get_user.py  test_login.py
src/api/: routes.py
src/api/routes/: auth.py  auth_routes.py  email_routes.py  routes.py  service_routes.py
src/automation/: __init__.py  config.py  contracts.py  debug_flows.py  engine.py  manager.py  state.py  triggers.py
src/automation/flows/: exemplo_basico.yaml
src/models/: email.py  token.py  user.py
src/notebooks/: teste.ipynb
src/notebooks/project-machine-learning/: pipeline.ipynb
src/notebooks/pt2treinamento/: 01.ipynb  01_nparray.ipynb  02_linspace.ipynb  03_slice.ipynb  04_interval.ipynb  05_sum.ipynb  06_reshape.ipynb  07_concat.ipynb  08_pd_series.ipynb  09_dict_to_series.ipynb  10_math_static.ipynb  11_deal_with_null.ipynb  12_df.ipynb  12_df_from_lists.ipynb  13_df_from_dict.ipynb  14_read_csv.ipynb  15_rename_cols.ipynb  16_selecting_rows_and_cols.ipynb  17_update.ipynb
src/notebooks/pt3treinamento/: 01_matplot.ipynb  02_bar_graphic.ipynb  03.ipynb  04_grafico_linha.ipynb  05_pd_matplot.ipynb
src/notebooks/pt4treinamento/: 01_linear_regression.ipynb  02_kmeans.ipynb  03_pre_processing_data.ipynb  04_pipeline.ipynb  05_accuracy.ipynb  06_mse.ipynb
src/request_ai/: cohere_req.py  cohere_req2.py  gpt4_all_req.py  hugging_req.py  main.py
src/services/: auth_service.py  cohere_service.py  email_service.py  file_service.py  gen_ai_summarize.py  hg_face.py  pdf_service.py
src/services/ai/: ai_router.py
src/test/: test_whatsapp.py
src/utils/: auth.py  commands.txt  config.py  firebase copy.py  firebase.py  generate_token.py  planejamento.txt  rate_limiter.py  security.py
src/utils/docs/: commands.txt  descrição_estrutura_pastas.txt  manage_debug.txt  text.txt
src/utils/security/: auth.py
src/webhooks/: webhook_test.py
src/whatsapp/: wpp_controller.py  wpp_models.py  wpp_service.py
uploads/: SIPD Fase 1 - Especificação de Requisitos e Mapeamento de Dados.docx
