[tool.poetry]
name = "artificialinteligence"
version = "0.1.0"
description = "develop integration with ai apis and make some scraping"
authors = ["Samuel Pacheco <pacheco.samuel@hotmail.com>"]

packages = [
    { include = "automation", from = "src" },
    { include = "whatsapp", from = "src" },
    { include = "api", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

openai = "^1.61.1"
python-dotenv = "^1.0.1"
cohere = "^5.13.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
requests = "^2.32.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.20"
bcrypt = "<4.1"
pyjwt = "^2.10.1"
firebase = "^4.0.1"
firebase-admin = "^6.6.0"
pytest = "^8.3.4"
pytest-asyncio = "^1.3.0"
respx = "^0.22.0"
pdfplumber = "^0.11.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
